Fix vertical alignment of search form label

--- a/assets/src/less/components.less
+++ b/assets/src/less/components.less
@@ -212,6 +212,7 @@
 	label {
 		margin-top: 0;
 		margin-bottom: 0;
+		vertical-align: top;
 	}
 
 	.search-field {
